--- a/INLINE_CTA_SNIPPET.html
+++ b/INLINE_CTA_SNIPPET.html
@@ -1,39 +1,39 @@
 <!-- INLINE CTA BLOK - Vložte tento HTML do obsahu článku tam, kde chcete CTA -->
-<!-- Lze použít přímo v admin panelu při vytváření článku -->
+<!-- Barevnost odpovídá hero sekci na homepage -->
 
-<div class="my-8 p-6 bg-gradient-to-br from-indigo-50 to-purple-50 border-2 border-indigo-200 rounded-xl float-right ml-6 mb-6" style="width: 100%; max-width: 350px;">
+<!-- Varianta 1: Float (text obtéká zprava) -->
+<div class="my-8 p-6 bg-gradient-to-br from-indigo-100 via-purple-100 to-pink-100 border-2 border-indigo-200 rounded-xl shadow-lg float-right ml-6 mb-6" style="width: 100%; max-width: 350px;">
     <div class="text-center">
-        <div class="inline-flex items-center justify-center w-12 h-12 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full mb-4">
+        <div class="inline-flex items-center justify-center w-12 h-12 rounded-lg mb-4 shadow-md" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
             <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
             </svg>
         </div>
         <h3 class="text-xl font-bold text-gray-900 mb-2">Vyzkoušejte SyncMyDay</h3>
         <p class="text-sm text-gray-600 mb-4">Zdarma na 14 dní. Bez platební karty.</p>
-        <a href="/register" class="block w-full px-6 py-3 bg-gradient-to-r from-indigo-600 to-purple-600 text-white font-semibold rounded-lg hover:opacity-90 shadow-md transition mb-2">
+        <a href="/register" class="block w-full px-6 py-3 font-semibold rounded-lg hover:opacity-90 shadow-md transform hover:scale-105 transition mb-2" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white !important; text-decoration: none !important;">
             Začít zdarma
         </a>
-        <a href="/#features" class="block w-full px-6 py-2 text-indigo-600 text-sm font-medium hover:text-indigo-700 transition">
+        <a href="/#features" class="block w-full px-6 py-2 text-sm font-semibold hover:text-indigo-700 transition" style="color: #6366f1 !important; text-decoration: none !important;">
             Zjistit více →
         </a>
     </div>
 </div>
 
-<!-- NEBO - Kompaktnější verze bez float (pro vložení mezi odstavce) -->
-
-<div class="my-8 p-6 bg-gradient-to-br from-indigo-50 to-purple-50 border-2 border-indigo-200 rounded-xl max-w-md mx-auto">
+<!-- Varianta 2: Centrovaný blok (přerušuje text) -->
+<div class="my-8 p-6 bg-gradient-to-br from-indigo-100 via-purple-100 to-pink-100 border-2 border-indigo-200 rounded-xl shadow-lg max-w-md mx-auto">
     <div class="text-center">
-        <div class="inline-flex items-center justify-center w-12 h-12 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full mb-4">
+        <div class="inline-flex items-center justify-center w-12 h-12 rounded-lg mb-4 shadow-md" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
             <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
             </svg>
         </div>
         <h3 class="text-xl font-bold text-gray-900 mb-2">Vyzkoušejte SyncMyDay</h3>
         <p class="text-sm text-gray-600 mb-4">Zdarma na 14 dní. Bez platební karty.</p>
-        <a href="/register" class="inline-block px-6 py-3 bg-gradient-to-r from-indigo-600 to-purple-600 text-white font-semibold rounded-lg hover:opacity-90 shadow-md transition mr-2">
+        <a href="/register" class="inline-block px-6 py-3 font-semibold rounded-lg hover:opacity-90 shadow-md transform hover:scale-105 transition mr-2" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white !important; text-decoration: none !important;">
             Začít zdarma
         </a>
-        <a href="/#features" class="inline-block px-6 py-3 text-indigo-600 text-sm font-medium hover:text-indigo-700 transition">
+        <a href="/#features" class="inline-block px-6 py-3 text-sm font-semibold hover:text-indigo-700 transition" style="color: #6366f1 !important; text-decoration: none !important;">
             Zjistit více →
         </a>
     </div>
